--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </p>
 
 <p class="note">
-  Works on regular webpages (not <code>chrome://</code> or the new-tab page).
+  Works on regular webpages (e.g., <code>https://...</code>), not browser settings page or empty new-tab page.
 </p>
 <p class="note">
   The filtered file will download to your browser’s default Downloads folder.
