--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
   <a id="bm-link" class="bookmarklet" href="#">ICS Date-Range Filter</a>
 </p>
 
+<!-- Auto-looping demo video -->
+<div class="demo">
+  <video src="assets/ics.mp4" autoplay muted loop playsinline preload="metadata"></video>
+  <div class="caption">How to install &amp; use the bookmarklet</div>
+</div>
+
 <p class="note">
   Works on regular webpages (e.g., <code>https://...</code>), not browser settings page or empty new-tab page.
 </p>
