--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <!-- Auto-looping demo video -->
 <div class="demo">
-  <video src="assets/ics.mp4" autoplay muted loop playsinline preload="metadata"></video>
+  <video src="assets/ics_detailed.mp4" autoplay muted loop playsinline preload="metadata"></video>
   <div class="caption">How to install &amp; use the bookmarklet</div>
 </div>
 
