--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <!-- Auto-looping demo video -->
 <div class="demo">
   <video src="assets/ics_detailed.mp4" autoplay muted loop playsinline preload="metadata"></video>
-  <div class="caption">How to install &amp; use the bookmarklet</div>
+  <div class="caption">How to use the ics date-range filter tool</div>
 </div>
 
 <p class="note">
