--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     font-size: 1.6rem;
     margin-bottom: .5rem;
   }
+  h2 { font-size: 1.2rem; margin: 1.25rem 0 .25rem; }
   a.bookmarklet {
     font-weight: 600;
     color: #0070f3;
@@ -57,6 +58,13 @@
   <div class="caption">How to use the ics date-range filter tool</div>
 </div>
 
+<h2>What this tool does</h2>
+<ul class="list">
+  <li>Opens a small panel where you pick a <strong>Start</strong> and <strong>End</strong> date.</li>
+  <li>You select an <code>.ics</code> calendar file; it <strong>keeps only events whose start date falls within that range</strong> (inclusive).</li>
+  <li>Downloads a new filtered <code>.ics</code> file to your browser’s default Downloads folder.</li>
+</ul>
+  
 <p class="note">
   Works on regular webpages (e.g., <code>https://...</code>), not browser settings page or empty new-tab page.
 </p>
