--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>ICS Date-Range Filter Bookmarklet</title>
+<title>Quick Tools for School</title>
 <style>
   body {
     font-family: system-ui, Segoe UI, Roboto, Arial, sans-serif;
