--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </ul>
   
 <p class="note">
-  Works on regular webpages (e.g., <code>https://...</code>), not browser settings page or empty new-tab page.
+  The bookmark won’t run on browser settings pages (e.g., chrome://) or on a blank new tab.
 </p>
 
 <!-- Store the bookmarklet code safely without escaping -->
